added seconf html file

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css"/>
-    <script defer src="./main.js"></script>
+    <script defer src="./main.js"></script> // defer
     <style>
         .footer {
            position: fixed;
@@ -18,20 +17,29 @@
            text-align: center;
         }
         </style>
-        <div class="footer">
+        <!-- <div class="footer">
             <center><audio controls autoplay loop>
                 <source src="./Assets/monza-track-side-69992.mp3" type="audio/mpeg">
               </audio></center>
-              </div>
-    
+              </div> -->
 </head>
+
+<div class="splash">
+    <br><br><br>
+    <center><h1 class = "splash-header">Welcome F1 Fans</h1></center>
+    <center><sub> click anywhere to begin</sub></center>
+  </div>
+
 <body>
-
-    <br>
-<h1><center>Welcome F1 Fans</center></h1>
-
+    <div class="container">
+    <br> -->
+ <h1><center>Welcome</center></h1>
 
 
 </body>
-
+<div class="footer">
+    <center><audio controls autoplay loop>
+        <source src="./Assets/monza-track-side-69992.mp3" type="audio/mpeg">
+      </audio></center>
+      </div>
 </html>
