--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css"/>
-    <script defer src="./main.js"></script> // defer
+    <script defer src="./main.js"></script> 
     <style>
         .footer {
            position: fixed;
@@ -17,11 +17,7 @@
            text-align: center;
         }
         </style>
-        <!-- <div class="footer">
-            <center><audio controls autoplay loop>
-                <source src="./Assets/monza-track-side-69992.mp3" type="audio/mpeg">
-              </audio></center>
-              </div> -->
+
 </head>
 
 <div class="splash">
@@ -31,12 +27,12 @@
   </div>
 
 <body>
-    <div class="container">
-    <br> -->
- <h1><center>Welcome</center></h1>
+
+    <a href="body.html">Body</a>
 
 
 </body>
+
 <div class="footer">
     <center><audio controls autoplay loop>
         <source src="./Assets/monza-track-side-69992.mp3" type="audio/mpeg">
