--- a/body.html
+++ b/body.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DocumentBody</title>
+    <link rel="stylesheet" href="./bodyStyle.css"/>
+    <script defer src="./main.js"></script> 
 </head>
 <body>
-    
+    <div class="container">
+        <br> -->
+     <h1><center>Welcome</center></h1>
 </body>
 </html>
