--- a/body.html
+++ b/body.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DocumentBody</title>
-    <link rel="stylesheet" href="./bodyStyle.css"/>
-    <script defer src="./main.js"></script> 
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css"/>
+    <script defer src="./main.js"></script>
 </head>
 <body>
-    <div class="container">
-        <br> -->
-     <h1><center>Welcome</center></h1>
+    <header class="header">
+        <br>
+<h1>Welcome Formula 1 Fans !</h1>
+<br>
+    </header>
+
+
+    <aside class="flagLeft">
+        <img id="flag"src="./Assets/checkFlag.png" alt="checkered flag"/>
+    </aside>
+
+
+    <main class="main">
+
+            <h1>Pick your favorite driver</h1>
+            <form id="driver">
+                <br>
+                <label for="driver">Pick from dropdown menu</label>
+                <input id="inputText"type="text" name="driver" value=""/>
+                <input id="submitdriver" type="submit" value="submit" />
+            </form>
+    </main>
+
+
+    <aside class="flagRight">
+        <img id="flag"src="./Assets/checkFlag.png" alt="checkered flag"/>
+    </aside>
+
+
 </body>
 </html>
