added a little readme

--- a/body.html
+++ b/body.html
@@ -19,7 +19,6 @@
         <br>
         <h1 class="font-effect-shadow-multiple">Welcome Formula 1 Fans !</h1>       
 
-<br>
     </header>
 
 
@@ -29,32 +28,27 @@
 
 
     <main class="main">
-        <p></p>
-            <h1>Pick your favorite driver</h1>
-            <!-- <div class="dropdown">
-                <div class="dropdown">
-                    <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-                    <div id="myDropdown" class="dropdown-content">
-                      <a href="#home">Home</a>
-                      <a href="#about">About</a>
-                      <a href="#contact">Contact</a>
-                    </div>
-                  </div> -->
+         
+            <form>
+                <label for="lastName">Input driver's last name</label>
+                <input type="text" id="driverName" value="Alonso">
 
+
+            </form>
 
                 <!-- <input id="inputText"type="text" name="driver" value=""/>
                 <input id="submitdriver" type="submit" value="submit" /> -->
             <!-- </form> -->
-        </div>
+        
     </main>
 
 
     <aside class="flagRight">
         <img id="flag"src="./Assets/checkFlag.png" alt="checkered flag"/>
-        <br>
-        <p>for more info on the API...</p>
+        <br><br>
+        <p>for more info on the ergast API...</p>
         <a href="http://ergast.com">
-        <button type="button">Click me to see API info</button>
+        <div class="hover"><button type="button">Click me</button></div>
         </a>
     </aside>
 
