getting there...slowly

--- a/body.html
+++ b/body.html
@@ -24,6 +24,10 @@
 
     <aside class="flagLeft">
         <img id="flag"src="./Assets/checkFlag.png" alt="checkered flag"/>
+        <p>Get added to oput mailing list !</p>
+        <a href="./secondBody.html">
+        <div class="hover"><button type="button">Click me</button></div>
+        </a>
     </aside>
 
 
@@ -32,13 +36,11 @@
             <form>
                 <label for="lastName">Input driver's last name</label>
                 <input type="text" id="driverName" value="Alonso">
+                <input type="submit" value="Submit">
 
 
             </form>
 
-                <!-- <input id="inputText"type="text" name="driver" value=""/>
-                <input id="submitdriver" type="submit" value="submit" /> -->
-            <!-- </form> -->
         
     </main>
 
