--- a/secondBody.html
+++ b/secondBody.html
@@ -7,6 +7,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Get added to our mailing list !</h2>
+<form id="myForm">
+<form action="/action_page.txt">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname" value="John"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+  <input type="submit" value="Submit" onclick="myFunction">
+</form>
+
+  <script>
+
+function myFunction() {
+  document.getElementById("myForm").reset();
+}
+
+</script>
+
+<input type="button" class="btn btn-lg btn-success" onclick="location.href='body.html';" value="Home" />
+
+
+</form> 
 </body>
 </html>
