--- a/secondBody.html
+++ b/secondBody.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./secondStyle.css"/>
     <title>Document</title>
 </head>
 <body>
-    <h2>Get added to our mailing list !</h2>
-<form id="myForm">
+    <h2><center>Thanks for signing our visitors book !</h2></center>
+<form id="myForm"><center>
 <form action="/action_page.txt">
   <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value="John"><br>
+  <input type="text" id="fname" name="fname" value=""><br>
   <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value="Doe"><br><br>
+  <input type="text" id="lname" name="lname" value=""><br><br>
   <input type="submit" value="Submit" onclick="myFunction">
+</center>
 </form>
 
   <script>
@@ -24,8 +26,8 @@ function myFunction() {
 }
 
 </script>
-
-<input type="button" class="btn btn-lg btn-success" onclick="location.href='body.html';" value="Home" />
+<br><br>
+<div class="hover"><center><input type="button" class="btn btn-lg btn-success" onclick="location.href='body.html';" value="Home" /></center>
 
 
 </form> 
