--- a/body.html
+++ b/body.html
@@ -56,11 +56,11 @@
 
             <article>
             <ul style="line-height:180%">
-                URL: <li id="URL"><a id="urllink"></a></li>
+                <li id="URL">URL :<a id="urllink" target="_blank"></a></li>
                 <br>
-                Name: <li id="name"></li>
+                <li id="name">Name :</li>
                 <br>
-                Nationality: <li id="nationality"></li>
+                <li id="nationality">Nationality :</li>
             </article> 
             </ul>
             </div>
@@ -69,6 +69,8 @@
                
               </script>
 
+
+
         
     </main>
 
@@ -76,8 +78,8 @@
         <img id="flag"src="./Assets/checkFlag.png" alt="checkered flag"/>
         <br><br>
         <p>for more info on the ergast API...</p>
-        <a href="http://ergast.com">
-        <div class="hover"><button type="button">Click me</button></div>
+        <p>Open link in a new window: <a href="http://ergast.com" target="_blank"><br>Visit ergast</a></p>
+        <!-- <div class="hover"><button type="button">Click me</button></div> -->
         </a>
     </aside>
 
