last commit today

--- a/body.html
+++ b/body.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <br>
-        <h1 class="font-effect-shadow-multiple">Welcome Formula 1 Fans !</h1>       
+        <h1 class="font-effect-shadow-multiple">Welcome F 1 Fans !</h1>       
     </header>
 
     <aside class="flagLeft">
@@ -82,6 +82,7 @@
         <!-- <div class="hover"><button type="button">Click me</button></div> -->
         </a>
     </aside>
+    
 
     <footer>
     <div class="footer">
