--- a/secondBody.html
+++ b/secondBody.html
@@ -15,7 +15,7 @@
   <label for="fname">First name:</label><br>
   <input type="text" required pattern=[a-zA]id="fname" name="fname" value=""><br>
   <label for="lname">Last name:</label><br>
-  <input type="text" required id="lname" name="lname" value=""><br><br>
+  <input type="text" required id="lname" name="lname" value=""><br>
   <input type="submit" value="Submit" onclick="myFunction">
 </center>
 </form>
@@ -28,8 +28,7 @@ function myFunction() {
 
 </script>
 <br><br>
-<div class="hover"><center><input type="button" class="btn btn-lg btn-success" onclick="location.href='body.html';" value="Home" /></center><br><br><br><br><br><br>
-
+<div class="hover"><center><input type="button" class="btn btn-lg btn-success" onclick="location.href='index.html';" value="Home" /></center><br><br><br>
 
 </form> 
 <img src="./Assets/redCar.png" width="600" height="300">
