--- a/secondBody.html
+++ b/secondBody.html
@@ -16,7 +16,8 @@
   <input type="text" required pattern=[a-zA]id="fname" name="fname" value=""><br>
   <label for="lname">Last name:</label><br>
   <input type="text" required id="lname" name="lname" value=""><br>
-  <input type="submit" value="Submit" onclick="myFunction">
+  <input type="submit" value="Submit">   
+  <!-- onclick="myFunction"> -->
 </center>
 </form>
 
